# iAAA-MRI-Contest-Image

./: .gitignore  README.md  iaaa_baseline.ipynb  pyproject.toml  submission.py
