[tool.poetry]
name = "iaaa"
version = "0.1.0"
description = "Runner Required images."
authors = ["developer <developer@iaaa.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
tensorflow = "2.15"
torch = {version = "2.3.0", source = "pytorch"}
pydantic = "2.7.4"
pydantic-settings = "^2.3.3"
pydantic-core = "2.18.4"
pydicom = "^2.4.4"
simpleitk = "^2.3.1"
pillow = "^10.3.0"
opencv-python = "^4.10.0.84"
numpy = "<2"
pandas = "^2.2.2"
nibabel = "^5.2.1"
numba = "^0.60.0"
omegaconf = "^2.3.0"
pyyaml = "^6.0.1"
torchsummary = "^1.5.1"
torchvision = {version = "0.18.0", source = "pytorch"}
triton = "2.3.0"
typer = "^0.12.3"
scikit-learn = "^1.5.0"
sklearn-pandas = "^2.2.0"
seaborn = "^0.13.2"
plotly = "^5.22.0"
dash = "^2.17.1"
streamlit = "^1.35.0"
scikit-image = "^0.24.0"
scipy = "^1.13.1"
matplotlib = "^3.9.0"
grpcio = "^1.64.1"
graphviz = "^0.20.3"
imageio = "^2.34.1"
ipython = "^8.12.3"
openpyxl = "^3.1.4"
loguru = "^0.7.2"
tqdm = "^4.66.4"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
