[tool.poetry]
name = "iaaa"
version = "0.1.0"
description = "Runner Required images."
authors = ["developer <developer@iaaa.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
tensorflow = "2.15"
torch = {version = "2.3.0", source = "pytorch"}
pydantic = "2.7.4"
pydantic-settings = "^2.3.3"
pydantic-core = "2.18.4"
pydicom = "^2.4.4"
simpleitk = "^2.3.1"
pillow = "^10.3.0"
opencv-python = "^4.10.0.84"
numpy = "<2"
pandas = "^2.2.2"
nibabel = "^5.2.1"
numba = "^0.60.0"
omegaconf = "^2.3.0"
pyyaml = "^6.0.1"
torchsummary = "^1.5.1"
torchvision = {version = "0.18.0", source = "pytorch"}
triton = "2.3.0"
typer = "^0.12.3"
scikit-learn = "^1.5.0"
sklearn-pandas = "^2.2.0"
seaborn = "^0.13.2"
plotly = "^5.22.0"
dash = "^2.17.1"
streamlit = "^1.35.0"
scikit-image = "^0.24.0"
scipy = "^1.13.1"
matplotlib = "^3.9.0"
grpcio = "^1.64.1"
graphviz = "^0.20.3"
imageio = "^2.34.1"
ipython = "^8.12.3"
openpyxl = "^3.1.4"
loguru = "^0.7.2"
tqdm = "^4.66.4"
tornado = "^6.4.1"
transformers = "^4.42.4"
tweepy = "^4.14.0"
imageio-ffmpeg = "^0.5.1"
imbalanced-learn = "^0.12.3"
albumentations = "^1.4.11"
lightgbm = "^4.4.0"
spacy = "^3.7.5"
yfinance = "^0.2.40"
h5py = "^3.11.0"
fastai = "^2.7.15"
dill = "^0.3.8"
dask = "^2024.7.0"
cachetools = "^5.4.0"
tensorflow-datasets = "^4.9.6"
vision-transformer-pytorch = "^1.0.3"
joblib = "^1.4.2"
ultralytics = "^8.2.71"
pipreqs = "^0.5.0"
pip-check-reqs = "^2.5.3"
xgboost = "^2.1.1"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
